unpackaged/main/default/objects/OpportunityLineItem/fields/a__c.field-meta.xml
<CustomField>
    <fullName>a__c</fullName>
    <description>Transaction Description for Invoice Line Item.</description>
    <formula>IF(PricebookEntry.Product2.Min_Users__c = 1  &amp;&amp;  ISPICKVAL(Opportunity.Business_Type__c,"New Business"), "Single-User Subscription",

IF(PricebookEntry.Product2.Min_Users__c = 1  &amp;&amp;  ISPICKVAL(Opportunity.Business_Type__c,"Renewal"),  "Renewal of Single-User Subscription",

 IF(PricebookEntry.Product2.Min_Users__c &gt; 1  &amp;&amp;  ISPICKVAL(Opportunity.Business_Type__c,"New Business"), "Multi-User Subscription",

IF(PricebookEntry.Product2.Min_Users__c &gt; 1  &amp;&amp;  ISPICKVAL(Opportunity.Business_Type__c,"Renewal"),  "Renewal of Multi-User Subscription",

IF(PricebookEntry.Product2.Min_Users__c &gt; 1  &amp;&amp; (ISPICKVAL(Opportunity.Business_Type__c,"Renewal Upgrade") || ISPICKVAL(Opportunity.Business_Type__c,"Upgrade")) , "Upgrade To Multi-User Subscription",

null)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a</label>
    <type>Text</type>
</CustomField>