unpackaged/main/default/objects/OpportunityLineItem/fields/ac__c.field-meta.xml
<CustomField>
    <fullName>ac__c</fullName>
    <formula>a__c &amp; BR() &amp; c__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ac</label>
    <type>Text</type>
</CustomField>