unpackaged/main/default/objects/OpportunityLineItem/fields/Account_text__c.field-meta.xml
<CustomField>
    <fullName>Account_text__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account (text)</label>
    <type>Text</type>
</CustomField>