unpackaged/main/default/objects/OpportunityLineItem/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <description>Product Duration</description>
    <formula>IF( PricebookEntry.Product2.Duration_Days__c = 364, "1 Year",
IF(PricebookEntry.Product2.Duration_Days__c = 729, "2 Years",null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>b</label>
    <type>Text</type>
</CustomField>