unpackaged/main/default/objects/OpportunityLineItem/fields/c__c.field-meta.xml
<CustomField>
    <fullName>c__c</fullName>
    <formula>CASE( 
PricebookEntry.Product2.Min_Users__c ,1, "Single license",
2,"Tier (1) allows up to 5 users", 
  6, "Tier (2) up to 10 users", 
  11,"Tier (3) up to 20 users",
  21,"Tier (4) up to 50 users",
  51,"Tier (5) up to 100 users",
  101,"Tier (6) up to 150 users", 
  151,"Tier (7) up to 200 users",
  201,"Tier (8) up to 300 users",
  301,"Unlimited",
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Multi Tier Description</inlineHelpText>
    <label>c</label>
    <type>Text</type>
</CustomField>