unpackaged/main/default/objects/OpportunityLineItem/fields/Duration_Difference__c.field-meta.xml
<CustomField>
    <fullName>Duration_Difference__c</fullName>
    <formula>IF(Duration__c &gt; Duration_Product__c, Duration__c - Duration_Product__c,IF(Duration_Product__c &gt; Duration__c, Duration_Product__c - Duration__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>