unpackaged/main/default/objects/OpportunityLineItem/fields/Duration_Product__c.field-meta.xml
<CustomField>
    <fullName>Duration_Product__c</fullName>
    <formula>PricebookEntry.Product2.Duration_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Product)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>