unpackaged/main/default/objects/OpportunityLineItem/fields/Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>Duration_Years__c</fullName>
    <formula>CASE(PricebookEntry.Product2.Duration_Days__c , 364,"1 Year",729,"2 Years",null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Years)</label>
    <type>Text</type>
</CustomField>