unpackaged/main/default/objects/OpportunityLineItem/fields/Product_ID_Long__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Long__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (Long)</label>
    <type>Text</type>
</CustomField>