unpackaged/main/default/objects/OpportunityLineItem/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>.Subscription generated when Opportunity is Closed Won.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>Subscription_NEW__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>