unpackaged/main/default/objects/OpportunityLineItem/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <displayFormat>Sub-{0000000}</displayFormat>
    <label>Subscription Number</label>
    <type>AutoNumber</type>
</CustomField>