unpackaged/main/default/objects/OpportunityLineItem/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <formula>IF( ISPICKVAL(PricebookEntry.Product2.Family, "Subscriptions") &amp;&amp; PricebookEntry.Product2.Min_Users__c = 1, "Single", 

IF(ISPICKVAL(PricebookEntry.Product2.Family, "Subscriptions") &amp;&amp; PricebookEntry.Product2.Min_Users__c &gt; 1, "Multi",null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>