unpackaged/main/default/objects/OpportunityLineItem/fields/Term_Ends__c.field-meta.xml
<CustomField>
    <fullName>Term_Ends__c</fullName>
    <label>Term Ends</label>
    <type>Date</type>
</CustomField>