unpackaged/main/default/objects/OpportunityLineItem/fields/Term_Starts__c.field-meta.xml
<CustomField>
    <fullName>Term_Starts__c</fullName>
    <label>Term Starts</label>
    <type>Date</type>
</CustomField>