unpackaged/main/default/objects/OpportunityLineItem/fields/View_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>View_Opportunity__c</fullName>
    <formula>HYPERLINK("/"&amp; Opportunity.Id ,"View Opportunity","_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Opportunity</label>
    <type>Text</type>
</CustomField>