unpackaged/main/default/objects/OpportunityLineItem/validationRules/Subscription_Renewal_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_Renewal_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Renewal_Rate__c ), ISPICKVAL(Product2.Family,"Subscription"),
Opportunity.Business_Unit__c = "Compliance Week"
)</errorConditionFormula>
    <errorDisplayField>Renewal_Rate__c</errorDisplayField>
    <errorMessage>Renewal Rate is required for Subscription Sales.</errorMessage>
</ValidationRule>