unpackaged/main/default/objects/OpportunityLineItem/validationRules/Term_Ends_is_locked_once_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Ends_is_locked_once_Closed_Won</fullName>
    <active>true</active>
    <description>Term Ends can only be changed by an Administrator once an Opportunity has been Closed Won.</description>
    <errorConditionFormula>OR( 
AND( 
ISPICKVAL( Opportunity.StageName, "Closed Won"), 
$Profile.Name &lt;&gt; "System Administrator", 
ISCHANGED(  Term_Ends__c  ) 
))</errorConditionFormula>
    <errorMessage>Term Ends can only be changed by an Administrator once an Opportunity has been Closed Won.</errorMessage>
</ValidationRule>