unpackaged/main/default/objects/OpportunityLineItem/validationRules/Term_Ends_is_locked_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Ends_is_locked_Renewal</fullName>
    <active>true</active>
    <description>Term Ends can only be changed by an Administrator for a Renewal Opportunity.</description>
    <errorConditionFormula>OR( 
AND( 
ISPICKVAL(  Opportunity.Business_Type__c , "Renewal"), 
$Profile.Name &lt;&gt; "System Administrator", 
ISCHANGED(  Term_Ends__c  ) 
))</errorConditionFormula>
    <errorMessage>Term Ends can only be changed by an Administrator for a Renewal Opportunity..</errorMessage>
</ValidationRule>