unpackaged/main/default/objects/OpportunityLineItem/validationRules/Term_Start_is_locked_once_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Start_is_locked_once_Closed_Won</fullName>
    <active>true</active>
    <description>Term Start can only be changed by an Administrator once an Opportunity has been Closed Won.</description>
    <errorConditionFormula>OR( 
AND( 
ISPICKVAL( Opportunity.StageName, "Closed Won"), 
$Profile.Name &lt;&gt; "System Administrator", 
ISCHANGED( Term_Starts__c ) 
))</errorConditionFormula>
    <errorMessage>Term Starts can only be changed by an Administrator once an Opportunity has been Closed Won.</errorMessage>
</ValidationRule>