unpackaged/main/default/objects/OpportunityLineItem/validationRules/Term_Start_is_locked_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Start_is_locked_Renewal</fullName>
    <active>true</active>
    <description>Term Start can only be changed by an Administrator for a Renewal Opportunity.</description>
    <errorConditionFormula>OR( 
AND( 
ISPICKVAL(  Opportunity.Business_Type__c , "Renewal"), 
$Profile.Name &lt;&gt; "System Administrator", 
ISCHANGED( Term_Starts__c ) 
))</errorConditionFormula>
    <errorMessage>Term Starts can only be changed by an Administrator for a Renewal Opportunity..</errorMessage>
</ValidationRule>